# x1-geyser-postgres

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.json
.github/workflows/: test.yml
ci/: cargo-build-test.sh  install-build-deps.sh  rust-version.sh  start_postgres.sh
scripts/: create_schema.sql  drop_schema.sql  migrate_to_agave_2.2.sql
src/: geyser_plugin_postgres.rs  postgres_client.rs
src/postgres_client/: postgres_client_account_index.rs  postgres_client_block_metadata.rs  postgres_client_transaction.rs
tests/: test_postgres_plugin.rs
